# CERN

./: .gitignore  .gitmodules  Makefile  README.md
src/: Makefile  crane.cpp  run_cern  run_cern.cpp
src/segmentation/: .gitignore  CMakeLists.txt  Makefile  README.md  event_detector.py  generate_events.py  signal_reader.py
src/segmentation/cmake/: CompilerSettings.cmake  Dependencies.cmake  FetchHDF5.cmake  FetchPOD5.cmake  FetchSlow5.cmake
src/segmentation/python-legacy/: .gitignore  README.md  requirements.txt
src/segmentation/python-legacy/c_src/: rawhash2_events.c  rawhash_events.c
src/segmentation/src/: CMakeLists.txt  fast5_reader.cpp  main.cpp  pod5_reader.cpp  rawhash2_events.c  rawhash2_events.h  rawhash_events.c  rawhash_events.h  signal_reader.cpp  signal_reader.hpp  slow5_reader.cpp
test/: README.md  environment.yml
test/data/: README.md  download_d1_ecoli_r1041.sh
test/data/cern_datasets/: README.md  download_cern_data.sh  prepare_d1.sh  prepare_d2.sh  prepare_d3.sh  prepare_training.sh
test/data/d1_ecoli/basecall_signals/: basecall_d1.sh
test/data/full_datasets/: download_d1_ecoli.sh  download_d2_dmelanogaster.sh  download_d3_human.sh
test/data/generate_events/: generate_d1_scrapR9_events.sh
test/data/segmentation/: README.md
test/evaluation/: README.md  create_indexes.sh
test/evaluation/d1_ecoli_hpc_off/: annotate_pafs.sh  map_all.sh  summarize_annotations.sh
test/evaluation/d1_ecoli_hpc_on/: annotate_pafs.sh  map_all.sh
test/evaluation/d2_dmelanogaster_hpc_off/: README.md  annotate_pafs.sh  map_all.sh  summarize_annotations.sh
test/evaluation/d2_dmelanogaster_hpc_on/: annotate_pafs.sh  map_all.sh
test/evaluation/d3_human_hpc_off/: README.md  annotate_pafs.sh  map_all.sh
test/evaluation/d3_human_hpc_on/: annotate_pafs.sh  map_all.sh
test/evaluation/read_mapping/: README.md
test/evaluation/read_mapping/d9_ecoli_r1041/: correct_d1_scrappie_R9_events.sh  run_minimap2.sh  run_rawhash2.sh  run_rawhash2_corrected_events.sh
test/evaluation/read_mapping/d9_ecoli_r1041/comparison/: generate_results.sh
test/scripts/: analyze_paf.py  annotate_paf.sh  convert_parquet_to_events.py  pafstats.py  run_rawhash2.sh  run_rawhash2_corrected.sh  run_rawhash2_index.sh
test/tools/: README.md  environment.yml
train/: HMM_continue_training.py  HMM_fine_tune.py  HMM_finish_training.py  HMM_train.py  HMM_train_deBrujin.py  HMM_train_errors.py  Makefile  README.md  environment.yml  train_hmm.c
train/models/: crane_parameters.tsv  hmm_128.hmm  hmm_128.tsv  hmm_16.tsv  hmm_192.tsv  hmm_196.hmm  hmm_196_camp.txt  hmm_196_scrapR10.txt  hmm_196_scrapR9.txt  hmm_256.hmm  hmm_256.tsv  hmm_32.tsv  hmm_64.tsv  hmm_8.tsv  hmm_96.tsv
train/tuning_parameters/: README.md  correct_and_map_F1.sh  parameter_search.sh  setup.sh
